# deanonymize-tor

./: .envrc  .gitignore  LICENSE  README.md  format.sh  install.sh  pyproject.toml  run_tests.sh
src/: debug_utils.py  plot_utils.py
src/attack/: adversary.py  intersection_attack.py
src/prob/: random_variable.py
src/sim/: client.py  message.py  network.py  node.py  server.py  tor.py
tests/exp/: test_time_to_deanonimize.py
tests/sim/: test_sim_objs.py  test_tor.py
